@@ -514,6 +514,7 @@ dwarf_pro_funcs.c:	dwarf_pro_nametbl.m4 dwarf_pro_funcs.m4
 dwarf_pro_types.c:	dwarf_pro_nametbl.m4 dwarf_pro_types.m4
 dwarf_pro_vars.c:	dwarf_pro_nametbl.m4 dwarf_pro_vars.m4
 
-%.c: %.m4
+SUFFIXES = .m4
+.m4.c:
 	m4 -D SRCDIR=${top_srcdir}/libdwarf $< > $@
 
